[package]
name = "sched"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
env_logger = "0.11.6"
gethostname = "1.0.0"
indicatif = "0.17.11"
log = "0.4.25"
ollama-rs = "0.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
